<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        app:showAsAction="always"/>
    <item android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorite"
        app:showAsAction="always"/>
</menu>